--- a/app/css/main.css
+++ b/app/css/main.css
@@ -945,8 +945,112 @@ body {
   left: 0;
 }
 
-#cover, #page2, #page3, #page4 {
+.page6-sprite, .page6-content1, .page6-content2, .page6-content3, .page6-content4, .page6-content5, .page6-line, .page6-rule-btn, .page6-sign-btn {
+  background-image: url('../images/page6-s83db92535b.png');
+  background-repeat: no-repeat;
+}
+
+.page6-content1 {
+  background-position: -96px -349px;
+  height: 215px;
+  width: 53px;
+}
+
+.page6-content2 {
+  background-position: -85px 0;
+  height: 349px;
+  width: 55px;
+}
+
+.page6-content3 {
+  background-position: -42px 0;
+  height: 345px;
+  width: 43px;
+}
+
+.page6-content4 {
+  background-position: -149px -349px;
+  height: 241px;
+  width: 42px;
+}
+
+.page6-content5 {
+  background-position: 0 0;
+  height: 319px;
+  width: 42px;
+}
+
+.page6-line {
+  background-position: 0 -590px;
+  height: 344px;
+  width: 195px;
+}
+
+.page6-rule-btn {
+  background-position: -54px -349px;
+  height: 142px;
+  width: 42px;
+}
+
+.page6-sign-btn {
+  background-position: 0 -349px;
+  height: 114px;
+  width: 54px;
+}
+
+#page6-content {
+  top: 174px;
+  left: 151px;
+  width: 306px;
+  height: 352px;
+}
+
+#page6-line {
+  top: 2px;
+  left: 50px;
+}
+
+#page6-content1 {
+  top: 0;
+  left: 253px;
+}
+
+#page6-content2 {
+  top: 3px;
+  left: 184px;
+}
+
+#page6-content3 {
+  top: 1px;
+  left: 123px;
+}
+
+#page6-content4 {
+  top: 5px;
+  left: 61px;
+}
+
+#page6-content5 {
+  top: 0;
+  left: 0;
+}
+
+#sign-btn {
+  top: 175px;
+  left: 65px;
+}
+
+#rule-btn {
+  top: 314px;
+  left: 71px;
+}
+
+#cover, #page2, #page3, #page4, #page56 {
   display: none;
+}
+
+#page5-content, #page6 {
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=main.css.map */
