--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -61,7 +61,7 @@ html, body {
  ========================================================================== */
 $main-bgcolor: #ffffff;
 $main-color: #000;
-$main-red: #e73202;
+$main-yellow: #9b7e22;
 
 /* ==========================================================================
 定义变量结束
@@ -179,16 +179,17 @@ $misc-sprite-dimensions: true;
 }
 // music=======================================================================
 
-#loading-num {
-    position: absolute;
-    top: 45%;;
-    width: 100%;
+#loading {
+    background: $main-bgcolor;
     z-index: 999;
-    text: {
-        align: center;
-    }
-    font: {
-        size: 56px;
+}
+
+#loading-logo {
+    @extend .logo;
+    top: 40%;
+    left: 50%;
+    margin: {
+        left: -83px;
     }
 }
 
@@ -198,7 +199,7 @@ $misc-sprite-dimensions: true;
 
 #loading-num {
     position: absolute;
-    top: 45%;;
+    top: 50%;;
     width: 100%;
     z-index: 999;
     text: {
@@ -570,10 +571,49 @@ $page6-sprite-dimensions: true;
     left: 71px;
 }
 
-#cover, #page2, #page3, #page4, #page56 {
+// bird sprite 设置
+$bird-layout:smart;
+$bird-spacing:10px;
+$bird-sprite-dimensions: true;
+@import "bird/*.png";
+@include  all-bird-sprites;
+
+#bird {
+    position: absolute;
+    width: 174px;
+    height: 185px;
+    // background: rgba(255, 0, 0, 0.2);
+}
+
+#bird1 {
+    top: 0;
+    left: 0;
+}
+
+#bird2 {
+    top: 23px;
+    left: 0;
+}
+
+#bird3 {
+    top: 29px;
+    left: 1px;
+}
+
+#bird4 {
+    top: 0;
+    left: 0;
+}
+
+#bird5 {
+    top: 14px;
+    left: 0;
+}
+
+#cover, #page2, #page3, #page4, #page56, #bird {
     display: none;
 }
 
-#page5-content, #page6 {
+#page5-content, #page6, #common-logo {
     visibility: hidden;
 }
