前六页简单动画
前六页简单动画

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -610,10 +610,10 @@ $bird-sprite-dimensions: true;
     left: 0;
 }
 
-#cover, #page2, #page3, #page4, #page56, #bird {
+#cover, #page2, #page3, #page4, #page56, #page5, #page6, #bird {
     display: none;
 }
 
-#page5-content, #page6, #common-logo {
+#common-logo {
     visibility: hidden;
 }
