--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1113,11 +1113,11 @@ body {
   left: 0;
 }
 
-#cover, #page2, #page3, #page4, #page56, #bird {
+#cover, #page2, #page3, #page4, #page56, #page5, #page6, #bird {
   display: none;
 }
 
-#page5-content, #page6, #common-logo {
+#common-logo {
   visibility: hidden;
 }
 
