--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1113,7 +1113,7 @@ body {
   left: 0;
 }
 
-#rule {
+#rule, #password-page {
   background: rgba(0, 0, 0, 0.8);
 }
 
@@ -1134,7 +1134,35 @@ body {
   background-image: url("../images/close-rule.png");
 }
 
-#cover, #page2, #page3, #page4, #page56, #page5, #page6, #bird, #rule {
+#password-container {
+  top: 300px;
+  left: 50%;
+  width: 544px;
+  height: 279px;
+  margin-left: -272px;
+  background-image: url("../images/password.png");
+}
+
+#confirm {
+  top: 126px;
+  left: 118px;
+  width: 359px;
+  height: 50px;
+  background-image: url("../images/confirm.png");
+}
+
+#password {
+  top: 64px;
+  left: 118px;
+  width: 360px;
+  height: 48px;
+  border: none;
+  background: transparent;
+  text-align: center;
+  line-height: 48px;
+}
+
+#cover, #page2, #page3, #page4, #page56, #page5, #page6, #bird, #rule, #password-page {
   display: none;
 }
 
